[package]
name = "cmsg"
version = "0.1.0"
authors = ["Alexadr <chabapok@gmail.com>"]
build = "build.rs"
description = "control messages bindings for RUST"
#documentation = "https://github.com/chabapok/cmsg-rs"
homepage      = "https://github.com/chabapok/cmsg-rs"
repository    = "https://github.com/chabapok/cmsg-rs"

keywords = ["cmsg"]


[dependencies]
libc = "0.2"